Trying to add a register button

--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -9,5 +9,6 @@
             <input type="checkbox" value="remember-me"> Remember me
           </label>
         </div>
-	<button class="btn btn-lg btn-primary btn-block" (click)="validateLogin();" type="button">Sign in</button>
+  <button class="btn btn-lg btn-primary btn-block" (click)="validateLogin();" type="button">Sign in</button>
+  <button class="btn btn-lg btn-primary btn-block" (click)="register();" type="button">Register</button>
 </form>
